# GraphRAG-Research-Workbench

./: .env.example  .gitignore  .gitleaks.toml  2026-02-12-深度研究全量替换实施计划.md  PROJECT_EXECUTION_STATE.md  PROJECT_PHASE_ROADMAP.md  README.md  TASK_TODO_FINE.md  TASK_TODO_MEDIUM.md  findings.md  progress.md  task.md  task_plan.md  后端迁移清单.md  深度研究代理.md  状态图.md
backend/: alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  tmp_mcp_live_summary.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_export_jobs.py  0002_create_kb_chat_tables.py  0003_create_ingestion_tables.py  0004_create_extension_tables.py  0005_create_research_reports.py  0006_create_knowledge_update_proposals.py  0007_create_evaluation_tables.py  0008_create_feedback_table.py  0009_remove_feedback_table.py  0010_add_run_id_and_related_sessions.py  0011_remove_tool_invocations.py  0012_add_kb_index_config.py  0013_create_index_rebuild_jobs.py  0014_drop_legacy_parent_child_enabled.py  0015_rebuild_ingestion_data_model.py  0016_drop_contextual_timeout_seconds.py  0017_add_processed_text_to_document_chunks.py  09b33ebd7c66_add_chunk_strategy_and_heading_path.py  19a4c2e7d8f1_add_research_event_idempotency_index.py  1c2d3e4f5a6b_remove_research_kb_selection_fields.py  27894051a580_baseline_schema.py  2f6a9c8d1b4e_add_clarifying_to_research_session_status.py  38f4aa0f8d91_reintroduce_research_session_tables.py  4b8e1d2c3f4a_add_chat_messages_recent_index.py  4ec9b68f7d26_simplify_ingestion_status_model.py  6f4b0d9e2c31_squashed_latest_schema_baseline.py  7c5f7d5b71d8_delete_legacy_sliding_window_kbs.py  9b9a6f4f20d1_add_ingestion_task_outbox.py  a6b8c9d0e1f2_remove_research_stack.py  a9e7c4d2b1f0_add_research_task_outbox.py  b3c4d5e6f7a8_add_llamacpp_model_provider.py  b52c8d9f1a10_add_structured_chunk_window_fields.py  b7c3d1a9f2e4_add_model_runtime_config_tables.py  c1d2e3f4a5b6_add_plan_ready_to_research_session_status.py  c4d7a3f1b8e9_remove_evaluations_and_evidence_compare.py  c7d8e9f0a1b2_ingestion_status_explicit.py  d1e8b6c4a9f0_add_index_rebuild_task_outbox.py  e5a1b7d3c4f2_support_multiple_models_per_provider.py  e6c8d9a7b123_rebuild_tool_extensions_for_typed_mcp.py  e8f9a0b1c2d3_ingestion_outbox_succeeded.py  (+4 more)
backend/graphify-out/: GRAPH_REPORT.md
backend/resources/: evaluation_dataset_example.json
backend/scripts/: reset_general_chat_checkpoints.py  seed_demo_kb.py  test_embedding.py  verify_milvus_hybrid.py
backend/src/app/: main.py
backend/tests/: test_agent_model_safety.py  test_alembic_ini_encoding.py  test_anthropic_prompt_caching_middleware.py  test_api_list_contract.py  test_api_service_dependencies.py  test_app_factory.py  test_architecture_service_providers.py  test_backend_python_file_line_limits.py  test_backend_research_removal_contract.py  test_bootstrap_create_direct_submission.py  test_celery_app_config.py  test_celery_beat_schedule.py  test_celery_reliability_config.py  test_chat_endpoint_dependencies.py  test_chat_model_cache.py  test_chat_model_cached_hot_path_imports.py  test_chat_model_factory.py  test_chat_model_factory_llamacpp.py  test_chat_replay_policy.py  test_chat_stream_lifecycle.py  test_chats_recent_performance.py  test_checkpoint_uses_pool.py  test_chunking.py  test_chunking_markdown_heading.py  test_context_budget_settings.py  test_context_builder.py  test_context_builder_token_counts.py  test_contextual_embedding_service.py  test_conversation_summary_service.py  test_deep_research_runtime.py  test_deep_research_runtime_backend.py  test_deep_research_runtime_cache.py  test_deep_research_workspace_cache.py  test_deepagents_io.py  test_deepagents_public_api_usage.py  test_deepagents_store.py  test_default_runtime_parameters.py  test_dependency_warnings.py  test_deploy_settings_validation.py  test_embedding_client.py  (+210 more)
backend/tests/agents/: test_general_chat_prompt_contracts.py  test_jina_read_excerpts.py  test_kb_answer_paragraphs.py  (+26 more)
(+999 files in other folders)
