[project]
name = "multi-kb-agent"
version = "0.1.0"
description = "多知识库 + 多智能体协作知识代理系统（后端）"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "celery>=5.4",
  "redis>=5.2",
  "httpx>=0.28",
  "tenacity>=9.0",
  "minio>=7.2",
  "tavily-python>=0.3",
  "pymilvus>=2.5",
  "deepagents==0.3.6",
  "langchain==1.2.6",
  "langchain-mcp-adapters",
  "langchain-openai>=0.2",
  "langgraph==1.0.6",
  "langgraph-checkpoint-postgres>=2.0",
  "langmem>=0.0.30",
  "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]
[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
