[project]
name = "multi-kb-agent"
version = "0.1.0"
description = "多知识库 + 多智能体协作知识代理系统（后端）"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.128.0,<0.129",
  "uvicorn>=0.40.0,<0.41",
  "pydantic>=2.11.10,<2.12",
  "pydantic-settings>=2.11.0,<2.12",
  "sqlalchemy[asyncio]>=2.0.46,<3",
  "asyncpg>=0.31.0,<0.32",
  "alembic>=1.18.1,<2",
  "celery>=5.6.2,<6",
  "redis>=7.1.0,<8",
  "httpx>=0.28.1,<0.29",
  "tenacity>=9.1.2,<10",
  "minio>=7.2.20,<8",
  "chardet>=5,<6",
  "python-docx>=1.2.0,<2",
  "pypdf>=6.1.1,<7",
  "readability-lxml>=0.8.4.1,<0.9",
  "mineru[core]>=2.7.3,<3",
  "tavily-python>=0.7.19,<0.8",
  "pymilvus>=2.6.7,<3",
  "deepagents>=0.4.10,<0.5",
  "langchain>=1.2.12,<2",
  "langchain-text-splitters>=1.1.1,<2",
  "langchain-mcp-adapters>=0.2.1,<0.3",
  "langchain-openai>=1.1.11,<2",
  "langchain-ollama>=1.0.1,<2",
  "langchain-nvidia-ai-endpoints>=1.2.0,<2",
  "langgraph>=1.1.1,<2",
  "langgraph-checkpoint-postgres>=3.0.4,<4",
  "langmem>=0.0.30,<0.1",
  "fastmcp>=3.1.0,<4",
  "cryptography>=45.0.6,<46",
  "redisvl>=0.16.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "ruff>=0.14.14,<0.15",
]
[build-system]
requires = ["hatchling>=1.28.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
