[project]
name = "multi-kb-agent"
version = "0.1.0"
description = "多知识库 + 多智能体协作知识代理系统（后端）"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.128.0,<0.129",
  "uvicorn>=0.40.0,<0.41",
  "anyio>=4.13.0,<5",
  "pydantic>=2.11.10,<2.12",
  "pydantic-settings>=2.11.0,<2.12",
  "sqlalchemy[asyncio]>=2.0.48,<3",
  "asyncpg>=0.31.0,<0.32",
  "alembic>=1.18.4,<2",
  "celery>=5.6.2,<6",
  "redis>=7.4.0,<8",
  "httpx>=0.28.1,<0.29",
  "minio>=7.2.20,<8",
  "chardet>=5.2.0,<6",
  "pyjwt>=2.12.1,<3",
  "pyyaml>=6.0.3,<7",
  "python-docx>=1.2.0,<2",
  "pypdf>=6.9.2,<7",
  "readability-lxml>=0.8.4.1,<0.9",
  "mineru[core]>=2.7.6,<3",
  "tavily-python>=0.7.23,<0.8",
  "pymilvus>=2.6.10,<3",
  "langchain>=1.2.13,<2",
  "langchain-core>=1.2.22,<2",
  "langchain-text-splitters>=1.1.1,<2",
  "langchain-mcp-adapters>=0.2.2,<0.3",
  "langchain-openai>=1.1.12,<2",
  "langchain-ollama>=1.0.1,<2",
  "langgraph>=1.1.3,<2",
  "langgraph-checkpoint-postgres>=3.0.5,<4",
  "langmem>=0.0.30,<0.1",
  "mcp>=1.26.0,<2",
  "opentelemetry-api>=1.40.0,<2",
  "tiktoken>=0.12.0,<1",
  "cryptography>=45.0.7,<46",
  "redisvl>=0.16.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "ruff>=0.14.14,<0.15",
]
[build-system]
requires = ["hatchling>=1.28.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
